force-app/main/default/objects/Ocorrencia__c/Ocorrencia__c.object-meta.xml
<CustomObject>
    <description>Objeto destinado á ocorrências internas do grupo Hospcom.</description>
    <label>Ocorrência</label>
    <nameField>
        <displayFormat>OC-{0000}</displayFormat>
        <label>Número da Ocorrência</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ocorrências</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>