force-app/main/default/objects/Ocorrencia__c/fields/Criar_acao_Corretiva__c.field-meta.xml
<CustomField>
    <fullName>Criar_acao_Corretiva__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Criar Ação Corretiva</label>
    <type>Checkbox</type>
</CustomField>