force-app/main/default/objects/Ocorrencia__c/fields/Data_e_Hora_da_Ocorr_ncia__c.field-meta.xml
<CustomField>
    <fullName>Data_e_Hora_da_Ocorr_ncia__c</fullName>
    <inlineHelpText>Quando o fato ocorreu.</inlineHelpText>
    <label>Data e Hora da Ocorrência</label>
    <type>DateTime</type>
</CustomField>