force-app/main/default/objects/Ocorrencia__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Insira a empresa da ocorrência</inlineHelpText>
    <label>Empresa Relativa</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.GrupoHospcom__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ocorrências</relationshipLabel>
    <relationshipName>Ocorrencias</relationshipName>
    <type>Lookup</type>
</CustomField>