force-app/main/default/objects/Ocorrencia__c/fields/Gravidade__c.field-meta.xml
<CustomField>
    <fullName>Gravidade__c</fullName>
    <inlineHelpText>Avalie o potencial de impacto dessa ocorrência.</inlineHelpText>
    <label>Gravidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>baixa</fullName>
            </value>
            <value>
                <fullName>média</fullName>
            </value>
            <value>
                <fullName>alta</fullName>
            </value>
            <value>
                <fullName>muito alta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>