force-app/main/default/objects/Ocorrencia__c/fields/Responsavel_pela_ocorrencia__c.field-meta.xml
<CustomField>
    <fullName>Responsavel_pela_ocorrencia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Pessoa envolvida ou relacionada diretamente com a ocorrência.</inlineHelpText>
    <label>Responsável pela Ocorrência</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <value>001i00000085QYbAAM</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ocorrências</relationshipLabel>
    <relationshipName>Ocorrencias</relationshipName>
    <type>Lookup</type>
</CustomField>