force-app/main/default/objects/Ocorrencia__c/fields/Sugest_o_para_Resolu_o__c.field-meta.xml
<CustomField>
    <fullName>Sugest_o_para_Resolu_o__c</fullName>
    <inlineHelpText>Se tiver alguma sugestão de como resolver o problema, descreva aqui.</inlineHelpText>
    <label>Sugestão para Resolução</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>