force-app/main/default/objects/Ocorrencia__c/validationRules/Bloqueia_alteracao.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloqueia_alteracao</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISNEW()),
  Acao_interna__c == false,
  TEXT(Status__c) &lt;&gt; &quot;Nova&quot;
)</errorConditionFormula>
    <errorMessage>Ocorência bloqueada</errorMessage>
</ValidationRule>