force-app/main/default/objects/Ocorrencia__c/validationRules/Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISNEW(),
  TEXT(Status__c) != &quot;Nova&quot;
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Ao criar uma nova ocorrência, o status inicial deve ser &apos;Nova&apos;.</errorMessage>
</ValidationRule>