force-app/main/default/objects/Ocorrencia__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Gravidade__c</columns>
    <columns>Status__c</columns>
    <columns>Departamento__c</columns>
    <columns>Reincidente__c</columns>
    <columns>datahora_abertura__c</columns>
    <columns>Responsavel_pela_ocorrencia__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>